--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -54,7 +54,7 @@ features:
     theme_light: github-light
     theme_dark: github-dark
   math:
-    enable: false
+    enable: true
   privacy_pack:
     enable: false
   repository:
